2003-02-11  Peter Fales <peter@fales-lorenz.net>

	* doc/descriptions/dc210.desc, doc/descriptions/dc240.desc:
	  Fix broken URLs to the Kodak web pages

2003-03-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_gt6801.c backend/gt68xx_gt6816.c
	  backend/gt68xx_low.c doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Small requests are done with a response
	  buffer of 8 bytes (instead of 64) now. Looks like GT-6816 based
	  scanners return 8 bytes if the firmware is loaded and 64 bytes if
	  it's not loaded. Changed GT-6816 firmware check to ignore errors
	  from above change. GT-6816 scanners work with the BSDs now (at least
	  once). Updated manpage concerning the BSDs.

2003-03-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/apple.c: Added missing option size (avoids crash on network
	  scanning). Patch from Milon Firikis <milonf@hotpop.com>.

2003-03-05  Oliver Schirrmeister <oschirr@abm.de>
	* backend/fujitsu.c, backend/fujitsu.h: renamed some variables
	* backend/fujitsu.c: gray duplex scanning now works with the 4097D
	  when disconnect is enabled in the scsi-controller
	* doc/descriptions/unsupported.desc: remove fujitsu fi4120C
	* doc/descriptions/fujitsu.desc added fi4120C, ScanParter 93GX

2003-03-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* include/sane/sanei.h sanei/sanei_constrain_value.c: Added function
	  sanei_check_value in addition to the existing sanei_constrain_value.
	  It checks if the value of a sane option fits into the constraint but
	  doesn't try to do any fixing/rounding.
	* doc/sane-scsi.man: Changed the example to use /dev/sg0 instead of
	  /dev/sge.
	* doc/descriptions/unsupported.desc: Removed Umax AstraSlim (now
	  supported by artec_eplus48u backend).

2003-03-03  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/plustek/Plustek-USB-TODO.txt: update
	* backend/plustek-devs.c backend/plustek-usb.c backend/plustek-usbhw.c